# TradingEngine

./: BaseState.h  BaseStrategy.cpp  BaseStrategy.h  CMakeLists.txt  CMakePresets.json  ConfManager.cpp  ConfManager.h  LogManager.h  README.md  RMManager.cpp  RMManager.h  ShmemManager.cpp  ShmemManager.h  StrategyManager.cpp  StrategyManager.h  SymbolManager.h  TimeManager.cpp  TimeManager.h  TradingEngine.cpp  TradingEngine.h  main.cpp
